--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 [dependencies]
 itertools = "0.13.0"
 nalgebra = "0.33.2"
+num_cpus = "1.16.0"
 permutation = "0.4.1"
 rand = "0.8.5"
+rayon = "1.10.0"
 sets = "1.2.1"
