--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 [dependencies]
 itertools = "0.13.0"
 nalgebra = "0.33.2"
+num-rational = "0.4.2"
 num-traits = "0.2.19"
 num_cpus = "1.16.0"
 permutation = "0.4.1"
